@startuml

title __CONTROLLER's Class Diagram__\n

  namespace  {
    namespace om.emotorstore.controller {
      class com.emotorstore.controller.CartController {
          + getCart()
          + getCartRedirect()
      }
    }
  }
  

  namespace  {
    namespace om.emotorstore.controller {
      class com.emotorstore.controller.CartResources {
          + addItem()
          + clearCart()
          + getCartById()
          + handleClientErrors()
          + handleServerErrors()
          + removeItem()
      }
    }
  }
  

  namespace  {
    namespace om.emotorstore.controller {
      class com.emotorstore.controller.HomeController {
          + about()
          + home()
          + login()
      }
    }
  }
  

  namespace  {
    namespace om.emotorstore.controller {
      class com.emotorstore.controller.OrderController {
          + createOrder()
      }
    }
  }
  

  namespace  {
    namespace om.emotorstore.controller {
      class com.emotorstore.controller.ProductController {
          + getProductByCategory()
          + getProducts()
          + viewProduct()
      }
    }
  }
  

  namespace  {
    namespace om.emotorstore.controller {
      class com.emotorstore.controller.RegisterController {
          + registerCustomer()
          + registerCustomerPost()
      }
    }
  }
  

  com.emotorstore.controller.CartController o-- com.emotorstore.service.CustomerService : customerService
  com.emotorstore.controller.CartResources o-- com.emotorstore.service.CartItemService : cartItemService
  com.emotorstore.controller.CartResources o-- com.emotorstore.service.CartService : cartService
  com.emotorstore.controller.CartResources o-- com.emotorstore.service.CustomerService : customerService
  com.emotorstore.controller.CartResources o-- com.emotorstore.service.ProductService : productService
  com.emotorstore.controller.OrderController o-- com.emotorstore.service.CartService : cartService
  com.emotorstore.controller.OrderController o-- com.emotorstore.service.CustomerOrderService : customerOrderService
  com.emotorstore.controller.ProductController o-- com.emotorstore.service.ProductService : productService
  com.emotorstore.controller.RegisterController o-- com.emotorstore.service.CustomerService : customerService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
